error.txt
Traceback (most recent call last):
  File "c:\Users\User\.vscode\extensions\ms-python.python-2020.3.71659\pythonFiles\lib\python\debugpy\wheels\debugpy\_vendored\pydevd\pydevd.py", line 3126, in <module>
    main()
  File "c:\Users\User\.vscode\extensions\ms-python.python-2020.3.71659\pythonFiles\lib\python\debugpy\wheels\debugpy\_vendored\pydevd\pydevd.py", line 3119, in main
    globals = debugger.run(setup['file'], None, None, is_module)
  File "c:\Users\User\.vscode\extensions\ms-python.python-2020.3.71659\pythonFiles\lib\python\debugpy\wheels\debugpy\_vendored\pydevd\pydevd.py", line 2244, in run
    return self._exec(is_module, entry_point_fn, module_name, file, globals, locals)
  File "c:\Users\User\.vscode\extensions\ms-python.python-2020.3.71659\pythonFiles\lib\python\debugpy\wheels\debugpy\_vendored\pydevd\pydevd.py", line 2251, in _exec
    pydev_imports.execfile(file, globals, locals)  # execute the script
  File "c:\Users\User\.vscode\extensions\ms-python.python-2020.3.71659\pythonFiles\lib\python\debugpy\wheels\debugpy\_vendored\pydevd\_pydev_imps\_pydev_execfile.py", line 25, in execfile
    exec(compile(contents+"\n", file, 'exec'), glob, loc)
  File "bot.py", line 1170
    if items == str(txtAdd.split(' | ')[0]):
     ^
IndentationError: expected an indented block
